# scicomp

./: .gitignore  README.md  scicomp.code-workspace
02/: poissson_solver.py
04/structures/: CSRMatrix.cpp  CSRMatrix.hpp  SPA.hpp
05/: main.cpp
05/results/: output.txt  times.txt
05/solvers/: solvers.cpp  solvers.hpp
05/structures/: DenseVector.cpp  DenseVector.hpp
06/: practice.cpp
06/MPIDebugExample/: main.cpp
07/: main.cpp
linalg_solvers/: main.cpp
linalg_solvers/solvers/: solvers.cpp
linalg_solvers/structures/: CSRMatrix.cpp
linalg_sparse_ops/: CMakeLists.txt  main.cpp
linalg_sparse_ops/structures/: CSRMatrix.cpp  SPA.cpp  SPA.hpp
linalg_structures/: main.cpp
linalg_structures/structures/: CSRMatrix.cpp  CSRMatrix.hpp  DenseVector.cpp
mpi_parallel_sort/: CMakeLists.txt
mpi_ringsum/: CMakeLists.txt  main.cpp
mpi_ringsum/MPIDebugExample/: CMakeLists.txt  README.md
